syntax = "proto3";

package common;

option go_package = "./codegen;codegen";

message Pagination {
  int32 page = 1;
  int32 pageSize = 2;
}
